common.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Victor+Mono:ital,wght@0,100..700;1,100..700&display=swap');

:root {
    --heading-text: "Montserrat", sans-serif;
    --body-text: "Victor Mono", system-ui, sans-serif;
    --spacing: 1rem;

    --white: #FFFFFF;
    --background: #212121;
    /* --red: #FC506E;
    --orange: #FB8C49;
    --yellow: #F9C823; */
    --red: #FC506E;
    --dark-red: #6f303a;
    --orange: #FB8C49;
    --dark-orange: #7d4b2c;
    --yellow: #F9C823;
    --dark-yellow: #6b5b25;
    --green: #2E933C;
    --dark-green: #0c4814;
}

html {scroll-behavior: smooth;}

/* ------------ layout ------------- */

body {
    display: flex;
    flex-direction: column;
    background-color: var(--background);
    min-height: 100dvh;
}

main {
    display: flex;
    flex-direction: column;
}

header {
    flex: 0 0 auto;
}

.chapters{
    /* padding-block-start: 2rem; */
    margin-block-start: 3rem;
    margin-block-end: 6rem;
}

.layout {
    min-height: 100svh;
    display: flex;
    flex-direction: column;
    padding: var(--spacing);
}

.layout-home {
    display: flex;
    flex-direction: column;
    padding: var(--spacing);
}

/* ------------ text ------------- */

h1 {
    font-family: var(--heading-text);
    font-size: 2.9rem;
    font-weight: 700;
    line-height: 3.5rem;
    padding-block: 2rem;
    color: var(--white);
    text-transform: uppercase;
}

h2 {
    font-family: var(--heading-text);
    font-size: 1.8rem;
    color: var(--white);
    margin-block-end: 4rem;
}

h3 {
    font-family: var(--heading-text);
    font-size: 1.4rem;
    font-weight: 600;
    line-height: 2rem;
    padding: 1rem;
    margin-block: 2rem;
    color: white;
    z-index: 2;
    display: inline-block;
    border-width: 1.5px;
    border-color: var(--orange);
}

p, small {
    font-family: var(--body-text);
    font-size: 1rem;
    font-weight: 400;
    line-height: 1.9rem;
    padding-block: 1.5rem;
    color: var(--white);
}

.italicize {font-style: italic;}

/* ------------ navigation ------------- */

#nav {
    display: flex;
    flex-direction: column;
    align-items: start;
    border-bottom: 1.5px solid var(--white);
    padding-bottom: var(--spacing);
    font-family: var(--body-text);
    color: var(--white);
    
}

#nav-links {
    display: flex;
    gap: 2rem;
}

#nav-links a{
    height: 40px; 
    display: inline-flex;
    align-items: center;
    justify-content: space-between;
    cursor: pointer;
    font-size: 0.75rem;
    text-decoration: none;
}

.nav-title {
    font-size: 1.4rem;
    font-weight: 700;
}

/* ------------ intro ------------- */

.intro {
    display: flex;
    flex-direction: column;
    justify-content: start;
    padding-block: var(--spacing);
    /* background-color: #212121; */
    flex: 1 0 auto;
    /* position: relative; */
}

.meta {
    display: grid;
    margin-block-end: var(--spacing);
    gap: var(--spacing);
    grid-template-columns: 1fr 1fr;
    grid-template-rows: auto auto;
    grid-template-areas:
    "two three"
    "one one";
}

.author { grid-area: two; }
.date { grid-area: three; }
.subtitle { 
    grid-area: one;
    max-width: 90vw; }


.intro ul p {padding-block: 0.2rem;}

#footer {
    border-top: 1.5px solid var(--white);
    padding-block-start: var(--spacing);
    background-color: var(--background);
}

.meta-details {
    font-family: var(--heading-text);
    font-weight: 200;
    font-size: 1rem;
    padding: 0;
}

/* ------------ links ------------- */

a {
    display: inline-block;
    color: var(--white);
    text-decoration: underline;
    text-decoration-thickness: 0.1em;
    text-underline-offset: 0.2em;
}

/* ------------ blockquote ------------- */

blockquote {
    position: relative;
    margin-inline-start: 3rem;
    margin-block: 8rem;
    padding-inline-start: 2rem;
    color: var(--white);
    z-index: 1;
    font-family: var(--body-text);
    font-size: 1rem;
}

blockquote p {
    margin: 0;
    padding: 0;
    padding-block: 2rem;
    font-family: var(--heading-text);
    font-size: 1.8rem;
    line-height: 2.5rem;
}

blockquote::before {
    content: "“";
    position: absolute;
    left: 0;
    top: 0%;
    font-family: var(--heading-text);
    font-weight: 800;
    font-size: 3rem;
    line-height: 1;
}

/* ------------ section headings ------------- */

.ch-no {
    padding: 1rem;
    border-style: solid;
    border-color: var(--white);
    border-width: 1.5px;
    font-family: var(--body-text);
    font-kerning: none;
    font-weight: 600;
    font-size: 2rem;
    display: inline-block;
    margin-bottom: 2rem;
}

.lines {
    padding: var(--spacing);
    margin-block: 3rem;
    padding-block: 2rem;
    border-top: 1.5px solid var(--white);
    border-bottom: 1.5px solid var(--white);
    text-align: center;
}

.lines, .lines p {
    font-weight: 700;
    font-size: 1.5rem;
    line-height: 2.4rem;
    text-align: center;
}

/* ------------ text treatments ------------- */

.terms {font-weight: 700;}

.terms::before {
    content: "{";
}

.terms::after {
    content: "}";
}

blockquote .terms,
blockquote .lines{
    font-weight:700;
}

.title-sig {
    letter-spacing: 0.05em;
    paint-order: stroke fill;
    -webkit-text-stroke-width: 0.25rem; 
}

.bold {
    font-weight: 700;
}

.experience {
    color: var(--dark-green);
    -webkit-text-stroke-color: var(--green);
}

/* ------------ interaction ------------- */

.interaction {
  position: relative;
  width: 180px;
  height: 180px;
  background: transparent;

  margin-inline: auto;
  margin: 3rem;
  align-self: center;
}

.square {
  position: absolute;
  width: 120px;
  height: 120px;
  opacity: 0.7;
}

.red {
  background: var(--dark-red);
  border: 3px solid var(--red);
  top: 0px;
  left: 0px;

  animation: move-red 3s ease-in-out forwards;
}

.yellow {
  background: var(--dark-yellow);
  border: 3px solid var(--yellow);
  bottom: 10px;
  right: 10px;

  animation: move-yellow 3s ease-in-out forwards;
}

@keyframes move-red {
  to {
    transform: translate(60px, 60px);
  }
}

@keyframes move-yellow {
  to {
    transform: translate(-60px, -60px);
  }
}

/* ------------ perception ------------- */

.penrose-triangle {
  max-width: 100%;
  height: auto;
  float: center;
}

/* ------------ image ------------- */

img {
	display: block;
	inline-size: 100%;
}

/* ------------ media queries ------------- */

@media (width>750px) {

    .layout {
        display: grid;
        height: 100dvh;
        grid-template-columns: 1fr 1fr;
        grid-template-rows:
            auto
            1fr
            auto;
        grid-template-areas:
            "nav nav"
            "intro content"
            "footer footer";
        padding-block: var(--spacing);
    }

    #nav { 
        grid-area: nav;
        display: flex;
        flex-direction: row;
        align-items: center;
        justify-content: space-between;
        padding-bottom: 0.5rem;
    }

    .nav-title {
    padding-block: var(--spacing);
    font-size: 1.2rem;
    line-height: 1rem;
    }

    .intro {
        grid-area: intro;
        position: relative;
        padding-inline-end: 2rem;
        justify-content: space-between;
    }

    .content { 
        grid-area: content;
        overflow: auto;
    }
    #footer  {grid-area: footer;}

    .intro::after {
        content: "";
        position: absolute;
        top: 0;
        bottom: 0;
        right: 0;
        width: 1.5px; 
        background-color: var(--white);
    }

    .content {
        padding-inline-start: 2rem;
        padding-inline-end: var(--spacing);
        padding-block: var(--spacing);
    }

    h1 {
        font-size: 4.9rem;
        line-height: 5.2rem;
        padding-block-start: var(--spacing);
    }

    .meta {
    grid-template-columns: 1fr 3fr;
    }

    .interaction {
        margin: 0;
    }
}

